Fri Jan  3 18:29:27 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/ctlib/ct.c src/tds/token.c
	- moved ctlib return status row support from libtds to libctl

Fri Jan  3 19:27:54 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c:
	- improve error support

Fri Jan  3 15:35:45 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/Makefile.am src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/odbc/error.c(added):
	- added INIT_HDBC and INIT_HENV macros
	- use numeric errors for ODBC
	- split error code from utils into error.c
	- updated all error code adding some more codes
	- add support for ODBC 3 driver

Fri Jan  3 12:57:00 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am:
	- do not install tdsodbc.h
	* include/tdsodbc.h  src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/odbc_util.h src/odbc/prepare_query.c:
	- rewrite error support
	- remove some useless cast
	- added INIT_HSTMT macro and use it

Thu Jan  2 15:25:45 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/ct.c, src/tds/token.c support return status as special row

Thu Jan  2 21:03:25 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.spec.in: update description
	* include/tdsodbc.h src/odbc/convert_sql2string.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- fix a bug deferencing a pointer
	- declare param_lenbind as SQLINTEGER*

Thu Jan  2 12:23:53 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c print informational messages
	* src/tds/token.c tds_process_msg: convert if-else to switch

Wed Jan  1 20:53:32 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h  changed values of datafmt.status bitmasks
	* src/ctlib/ct.c  minor bugs
	* src/tds/token.c  set TDS_CMD_DONE for TDS_NO_MORE_RESULTS

Wed Jan  1 17:59:12 EST 2003	JK Lowden <jklowden@schemamania.org>