@@ -1,3 +1,6 @@
+Fri Jan  4 10:52:09 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/ctlib/ct.c: cleanup
+
 Fri Jan  3 18:29:27 EST 2003	JK Lowden <jklowden@schemamania.org>
 	* include/tds.h src/ctlib/ct.c src/tds/token.c
 	- moved ctlib return status row support from libtds to libctl
